<resources>
    <string name="app_name">ThemedResearch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_text">家計簿アプリ</string>
    <string name="initial_setting_text">残高設定</string>
    <string name="zandaka">残高を入力してください</string>
    <string name="next">次へ</string>
    <string name="start_btn">タップしてスタート</string>
    <string name="bt_search">検索</string>
    <string name="bt_edit">編集</string>
    <string name="bt_addition">追加</string>
    <string name="bt_configuration">設定</string>
    <string name="txt_date">日付</string>
    <string name="txt_expense_item">費目</string>
    <string name="txt_amount_of_money">金額</string>
    <string name="txt_income">収入</string>
    <string name="txt_balance">残高</string>
    <string name="date_hint">日付を入力してください</string>
    <string name="expense_item_hint">費目を入力してください</string>
    <string name="money_hint">金額を入力してください</string>
    <string name="date_format">%1$4d/%2$02d/%3$02d</string>
</resources>